[project]
name = "reno-markdown"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Caley", email = "mjcaley@darkarctic.com" }
]
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.10.2",
    "reno>=4.1.0",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "dulwich>=1.2.6",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "reno>=4.1.0",
    "zensical>=0.0.45",
]
lint = [
    "pyrefly>=1.1.1",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[project.entry-points."markdown.extensions"]
reno_release_notes = "reno_markdown.extension:RenoReleaseNotesExtension"

[tool.ruff]
target-version = "py311"
exclude = ["docs"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
case-sensitive = true
